--- a/home.html
+++ b/home.html
@@ -17,20 +17,23 @@
                 <option value="3">Random Agent and Game Mode Challenge</option>
             </select>
             <button id="selectButton">Select</button>
-
         </div>
         <div id="result-container" class="result-container">
             <div class="agent-result">
-                <div class="result-heading"></div>
+                <div class="result-heading">Agent</div>
                 <div class="result-content">
                     <img id="agent-image" src="" alt="Agent Image">
                     <div id="agent-name"></div>
                 </div>
             </div>
             <div class="challenge-result">
-                <div class="result-heading"></div>
+                <div class="result-heading">Challenge</div>
                 <div class="result-content" id="challenge-result"></div>
             </div>
+        </div>
+        <!-- Move the "Agent Information" button to the top right corner -->
+        <div class="top-right-button">
+            <a href="agent_information.html" class="button">Agent Information</a>
         </div>
     </div>
     
