--- a/agent_information.html
+++ b/agent_information.html
@@ -14,16 +14,16 @@
         </div>
         <h1>Agent Information</h1>
         <!-- Agent: Brimstone -->
-        <div class="agent-info">
-            <img src="images/brimstone.png" alt="Brimstone Image">
+       <div class="agent-info" data-scroll="fade-in">
+            <img src="images/brimstone.png" alt="Brimstone Image" >
             <h2>Brimstone</h2>
             <p>Role: Controller</p>
             <p>Abilities: Incendiary, Sky Smoke, Stim Beacon, Orbital Strike</p>
         </div>
 
         <!-- Agent: Viper -->
-        <div class="agent-info">
-            <img src="images/viper.png" alt="Viper Image">
+       <div class="agent-info" data-scroll="fade-in">
+            <img src="images/viper.png" alt="Viper Image" >
             <h2>Viper</h2>
             <p>Role: Controller</p>
             <p>Abilities: Poison Cloud, Toxic Screen, Snake Bite, Viper's Pit</p>
@@ -31,8 +31,8 @@
         </div>
 
         <!-- Agent: Omen -->
-        <div class="agent-info">
-            <img src="images/omen.png" alt="Omen Image">
+       <div class="agent-info" data-scroll="fade-in">
+            <img src="images/omen.png" alt="Omen Image" >
             <h2>Omen</h2>
             <p>Role: Controller</p>
             <p>Abilities: Shrouded Step, Paranoia, Dark Cover, From the Shadows</p>
@@ -40,8 +40,8 @@
         </div>
 
         <!-- Agent: Killjoy -->
-        <div class="agent-info">
-            <img src="images/killjoy.png" alt="Killjoy Image">
+       <div class="agent-info" data-scroll="fade-in">
+            <img src="images/killjoy.png" alt="Killjoy Image" >
             <h2>Killjoy</h2>
             <p>Role: Sentinel</p>
             <p>Abilities: Nanoswarm, Alarmbot, Turret, Lockdown</p>
@@ -49,8 +49,8 @@
         </div>
 
         <!-- Agent: Cypher -->
-        <div class="agent-info">
-            <img src="images/cypher.png" alt="Cypher Image">
+       <div class="agent-info" data-scroll="fade-in">
+            <img src="images/cypher.png" alt="Cypher Image" >
             <h2>Cypher</h2>
             <p>Role: Sentinel</p>
             <p>Abilities: Trapwire, Cyber Cage, SpyCam, Neural Theft</p>
@@ -58,16 +58,16 @@
         </div>
 
         <!-- Agent: Harbor -->
-        <div class="agent-info">
-            <img src="images/harbor.png" alt="Harbor Image">
+       <div class="agent-info" data-scroll="fade-in">
+            <img src="images/harbor.png" alt="Harbor Image" >
             <h2>Harbor</h2>
             <p>Role: Duelist</p>
             <p>Abilities: Cove, High Tide, Cascade, Reckoning</p>
         </div>
 
         <!-- Agent: Sage -->
-        <div class="agent-info">
-            <img src="images/sage.png" alt="Sage Image">
+       <div class="agent-info" data-scroll="fade-in">
+            <img src="images/sage.png" alt="Sage Image" >
             <h2>Sage</h2>
             <p>Role: Sentinel</p>
             <p>Abilities: Heal Orb, Slow Orb, Barrier Orb, Resurrection</p>
@@ -75,8 +75,8 @@
         </div>
 
         <!-- Agent: Sova -->
-        <div class="agent-info">
-            <img src="images/sova.png" alt="Sova Image">
+       <div class="agent-info" data-scroll="fade-in">
+            <img src="images/sova.png" alt="Sova Image" >
             <h2>Sova</h2>
             <p>Role: Initiator</p>
             <p>Abilities: Owl Drone, Shock Bolt, Recon Bolt, Hunter's Fury</p>
@@ -84,8 +84,8 @@
         </div>
 
         <!-- Agent: Phoenix -->
-        <div class="agent-info">
-            <img src="images/phoenix.png" alt="Phoenix Image">
+       <div class="agent-info" data-scroll="fade-in">
+            <img src="images/phoenix.png" alt="Phoenix Image" >
             <h2>Phoenix</h2>
             <p>Role: Duelist</p>
             <p>Abilities: Blaze, Curveball, Hot Hands, Run It Back</p>
@@ -93,8 +93,8 @@
         </div>
 
         <!-- Agent: Jett -->
-        <div class="agent-info">
-            <img src="images/jett.png" alt="Jett Image">
+       <div class="agent-info" data-scroll="fade-in">
+            <img src="images/jett.png" alt="Jett Image" >
             <h2>Jett</h2>
             <p>Role: Duelist</p>
             <p>Abilities: Cloudburst, Updraft, Tailwind, Blade Storm</p>
@@ -102,8 +102,8 @@
         </div>
 
         <!-- Agent: Reyna -->
-        <div class="agent-info">
-            <img src="images/reyna.png" alt="Reyna Image">
+       <div class="agent-info" data-scroll="fade-in">
+            <img src="images/reyna.png" alt="Reyna Image" >
             <h2>Reyna</h2>
             <p>Role: Duelist</p>
             <p>Abilities: Leer, Devour, Dismiss, Empress</p>
@@ -111,8 +111,8 @@
         </div>
 
         <!-- Agent: Kayo -->
-        <div class="agent-info">
-            <img src="images/kayo.png" alt="Kayo Image">
+       <div class="agent-info" data-scroll="fade-in">
+            <img src="images/kayo.png" alt="Kayo Image" >
             <h2>Kayo</h2>
             <p>Role: Initiator</p>
             <p>Abilities: FRAG/ment, Zero/point, Flash/Drive, Null/CMD</p>
@@ -120,8 +120,8 @@
         </div>
 
         <!-- Agent: Neon -->
-        <div class="agent-info">
-            <img src="images/neon.png" alt="Neon Image">
+       <div class="agent-info" data-scroll="fade-in">
+            <img src="images/neon.png" alt="Neon Image" >
             <h2>Neon</h2>
             <p>Role: Initiator</p>
             <p>Abilities: Fast Lane, Fast Gear, Relay Bolt, Ion Surge</p>
@@ -129,8 +129,8 @@
         </div>
 
         <!-- Agent: Breach -->
-        <div class="agent-info">
-            <img src="images/breach.png" alt="Breach Image">
+       <div class="agent-info" data-scroll="fade-in">
+            <img src="images/breach.png" alt="Breach Image" >
             <h2>Breach</h2>
             <p>Role: Initiator</p>
             <p>Abilities: Aftershock, Flashpoint, Fault Line, Rolling Thunder</p>
@@ -138,8 +138,8 @@
         </div>
 
         <!-- Agent: Skye -->
-        <div class="agent-info">
-            <img src="images/skye.png" alt="Skye Image">
+       <div class="agent-info" data-scroll="fade-in">
+            <img src="images/skye.png" alt="Skye Image" >
             <h2>Skye</h2>
             <p>Role: Initiator</p>
             <p>Abilities: Regrowth, Trailblazer, Guiding Light, Seekers</p>
@@ -147,8 +147,8 @@
         </div>
 
         <!-- Agent: Raze -->
-        <div class="agent-info">
-            <img src="images/raze.png" alt="Raze Image">
+       <div class="agent-info" data-scroll="fade-in">
+            <img src="images/raze.png" alt="Raze Image" >
             <h2>Raze</h2>
             <p>Role: Duelist</p>
             <p>Abilities: Boom Bot, Blast Pack, Paint Shells, Showstopper</p>
@@ -156,8 +156,8 @@
         </div>
 
         <!-- Agent: Astra -->
-        <div class="agent-info">
-            <img src="images/astra.png" alt="Astra Image">
+       <div class="agent-info" data-scroll="fade-in">
+            <img src="images/astra.png" alt="Astra Image" >
             <h2>Astra</h2>
             <p>Role: Controller</p>
             <p>Abilities: Gravity Well, Nova Pulse, Nebula, Astral Form / Cosmic Divide</p>
@@ -165,8 +165,8 @@
         </div>
 
         <!-- Agent: Yoru -->
-        <div class="agent-info">
-            <img src="images/yoru.png" alt="Yoru Image">
+       <div class="agent-info" data-scroll="fade-in">
+            <img src="images/yoru.png" alt="Yoru Image" >
             <h2>Yoru</h2>
             <p>Role: Duelist</p>
             <p>Abilities: Fakeout, Blindside, Gatecrash, Dimensional Drift</p>
@@ -174,8 +174,8 @@
         </div>
 
         <!-- Agent: Deadlock -->
-        <div class="agent-info">
-            <img src="images/deadlock.png" alt="Deadlock Image">
+       <div class="agent-info" data-scroll="fade-in">
+            <img src="images/deadlock.png" alt="Deadlock Image" >
             <h2>Deadlock</h2>
             <p>Role: Initiator</p>
             <p>Abilities: Barrier Mesh, Sonic Sensor, Gravnet, Annihilation</p>
@@ -183,8 +183,8 @@
         </div>
 
         <!-- Agent: Gekko -->
-        <div class="agent-info">
-            <img src="images/gekko.png" alt="Gekko Image">
+       <div class="agent-info" data-scroll="fade-in">
+            <img src="images/gekko.png" alt="Gekko Image" >
             <h2>Gekko</h2>
             <p>Role: Initiator</p>
             <p>Abilities: WingMan, Dizzy, Mosh Pit, Thrash </p>
@@ -192,8 +192,8 @@
         </div>
 
         <!-- Agent: Iso -->
-        <div class="agent-info">
-            <img src="images/iso.png" alt="Iso Image">
+       <div class="agent-info" data-scroll="fade-in">
+            <img src="images/iso.png" alt="Iso Image" >
             <h2>Iso</h2>
             <p>Role: Controller</p>
             <p>Abilities: Undercut, Double Tap, Contingency, Kill Contract</p>
@@ -201,8 +201,8 @@
         </div>
 
         <!-- Agent: Chamber-->
-        <div class="agent-info">
-            <img src="images/chamber.png" alt="Chamber Image">
+       <div class="agent-info" data-scroll="fade-in">
+            <img src="images/chamber.png" alt="Chamber Image" >
             <h2>Chamber</h2>
             <p>Role: Sentinel</p>
             <p>Abilities: TRADEMARK, RENDEZVOUS, HEADHUNTER, TOUR DE FORCE</p>
@@ -210,8 +210,8 @@
         </div>
 
         <!-- Agent: Fade-->
-    <div class="agent-info">
-            <img src="images/fade.png" alt="Fade Image">
+   <div class="agent-info" data-scroll="fade-in">
+            <img src="images/fade.png" alt="Fade Image" >
             <h2>Fade</h2>
             <p>Role: Initiator</p>
             <p>Abilities: Seize, Haunt, Prowler, NightFall</p>
@@ -222,6 +222,36 @@
 
     </div>
 
-    <script src="script.js"></script>
+    <script>
+        // JavaScript code for scroll animations
+        document.addEventListener("DOMContentLoaded", function () {
+            // Function to handle animations based on scroll position
+            function handleScrollAnimations(entries, observer) {
+                entries.forEach((entry) => {
+                    if (entry.isIntersecting) {
+                        const target = entry.target;
+                        const animationClass = target.getAttribute('data-scroll');
+                        target.classList.add(animationClass);
+                        observer.unobserve(target);
+                    }
+                });
+            }
+
+            // Set up the IntersectionObserver
+            const observer = new IntersectionObserver(handleScrollAnimations, {
+                root: null, // Use the viewport as the root
+                rootMargin: '0px', // No margin
+                threshold: 0.2, // 20% of the target element must be visible
+            });
+
+            // Find all elements with the data-scroll attribute
+            const scrollElements = document.querySelectorAll('[data-scroll]');
+
+            // Observe each scroll element
+            scrollElements.forEach((element) => {
+                observer.observe(element);
+            });
+        });
+    </script>
 </body>
 </html>
